--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
-    "vuetify": "^3.1.12"
+    "vuetify": "^3.1.15"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
@@ -28,7 +28,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
-    "typescript": "~4.8.4",
+    "typescript": "^5.0.4",
     "vite": "^4.1.4",
     "vue-tsc": "^1.2.0"
   }
